--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <name>my-app</name>
   <url>http://maven.apache.org</url>
   <properties>
-		<jacoco.version>0.7.5.201505241946</jacoco.version>
+		<jacoco.version>0.8.6</jacoco.version>
 		<junit.version>4.12</junit.version>
 	</properties>
   <dependencies>
