--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,18 @@
           </archive>
         </configuration>
       </plugin>
+	    <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
+            <configuration>
+                <printSummary>false</printSummary>
+                <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                <forkCount>3</forkCount>
+                <reuseForks>true</reuseForks>
+                <argLine>${surefireArgLine} -Xmx1024m -noverify</argLine>                  
+            </configuration>
+        </plugin>
       <plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
