--- a/deploy_war.yml
+++ b/deploy_war.yml
@@ -1,13 +1,13 @@
 #Ansible Playbook to run Tomcat
 ---
 - name: Deploy to Tomcat
-  hosts: "52.91.150.173"
+  hosts: "100.26.169.170"
   become: yes
   become_user: ec2-user
   tasks:
     - name: Deploy WAR file
       ansible.builtin.copy:
-        src: ./target/soccer-stats-0.0.2.war
-        dest: /usr/src/app
+        src: ./target/my-app-1.0-SNAPSHOT.jar
+        dest: /usr/src/app/simple.jar
     - name: Pull and run Tomcat
       shell: "docker run -p 80:8080 -v /usr/src/app:/usr/local/tomcat/webapps tomcat:8.0-alpine"
