--- a/deploy_war.yml
+++ b/deploy_war.yml
@@ -10,4 +10,4 @@
         src: ./target/my-app-1.0-SNAPSHOT.jar
         dest: /usr/src/app/simple.jar
     - name: Pull and run Tomcat
-      shell: "docker run -p 80:8080 -v /usr/src/app:/usr/local/tomcat/webapps tomcat:8.0-alpine"
+      shell: "docker run -p 80:8080 -v /usr/src/app:/usr/local/tomcat/webapps -d tomcat:8.0-alpine"
