--- a/deploy_war.yml
+++ b/deploy_war.yml
@@ -5,11 +5,11 @@
   become: yes
   become_user: ec2-user
   tasks:
-#     - name: Deploy WAR file
-#       ansible.builtin.copy:
-#         src: ./target/my-app-1.0-SNAPSHOT.jar
-#         dest: /usr/src/app/simple.jar
-    - name: Copy executable to Tomcat container
-      shell: "docker cp simple.war tomcat:/usr/local/tomcat/webapps"
+    - name: Deploy WAR file
+      ansible.builtin.copy:
+        src: ./target/my-app-1.0-SNAPSHOT.jar
+        dest: /usr/src/app/simple.jar
+#     - name: Copy executable to Tomcat container
+#       shell: "docker cp simple.war tomcat:/usr/local/tomcat/webapps"
     - name: Restart Container
       shell: "docker restart tomcat"
