--- a/deploy_war.yml
+++ b/deploy_war.yml
@@ -8,8 +8,8 @@
     - name: Deploy WAR file
       ansible.builtin.copy:
         src: ./target/my-app-1.0-SNAPSHOT.jar
-        dest: /usr/src/app/simple.jar
+        dest: /home/ec2-user/simple.jar
     - name: Copy executable to Tomcat container
-      shell: "docker cp simple.war tomcat:/usr/local/tomcat/webapps"
+      shell: "docker cp /home/ec2-user/simple.jar tomcat:/usr/local/tomcat/webapps"
     - name: Restart Container
       shell: "docker restart tomcat"
